Update Design Document Sections

--- a/Documents/DesignDocument.tex
+++ b/Documents/DesignDocument.tex
@@ -24,12 +24,13 @@
     
     \newpage
     \section{Revision History}
-    \section{Introduction}
-    \section{Anticipated and Unlikely Changes}
-    \subsection{Anticipated Changes}
+    \section{Module Guide For No Limit Texas HoldEm Program(NLTP)}
+    \subsection{Introduction}
+    \subsection{Anticipated and Unlikely Changes}
+    \subsubsection{Anticipated Changes}
     \textbf{AC1}
      
-    \subsection{Unlikely Changes}
+    \subsubsection{Unlikely Changes}
     \textbf{UC1}
     
     \section{Module Hierarchy}
@@ -52,6 +53,12 @@
     \hline
     \end{tabular}
     \end{table}
+	
+	\section{Connection Between Requirements and Design}
+	\section{Module Decomposition}    
+    \subsection{Hardware Hiding Module}
+    \subsection{Behaviour-Hiding Module}
+    \subsection{Software Decision Module}
     
     \section{MIS of TexasHoldEm Module}
     \subsection{Secret}
