added unlikely changes

--- a/Documents/DesignDocument.tex
+++ b/Documents/DesignDocument.tex
@@ -38,7 +38,11 @@
     
      
     \subsubsection{Unlikely Changes}
-    \textbf{UC1:} 
+    \textbf{UC1:} Input/Output devices (Input: File and/or Mouse, Output: File, Memory, and/or Screen).\\
+    \textbf{UC2:} The algorithm to calculate hand strength will always use the input from player’s hand and community card\\
+    \textbf{UC3:} The game will always end when a player runs out of chips\\
+    \textbf{UC4:} Any change to game state are always display to output devices\\
+    \textbf{UC5:} Algorithm used to calculate AIOpponent’s action are defined using the parameters defined in the player and pot module\\
     
     \section{Module Hierarchy}
     This section provides an overview of the module design. Modules are summarized in a hierarchy decomposed by secrets in Table 1. The modules listed below, which are leaves in the hierarchy tree, are the modules that will actually be implemented.\\
