Added numbering to the functional requirements in the Requirements document

--- a/Documents/Requirements Document.tex
+++ b/Documents/Requirements Document.tex
@@ -104,13 +104,13 @@
 	\subsection{Functional Requirements}
 	The system shall:
 	\begin{itemize}
-	\item 	have a help page that the user can click on to explains the rules of the game. The page should be accessible at anytime during the game, should have all the basic rules of the game, all the card hands ranked in order of strength, and extra tips and tricks.
-	\item 	Have a GUI that the user will use to start the game and play which includes:
+	\item 1.) have a help page that the user can click on to explains the rules of the game. The page should be accessible at anytime during the game, should have all the basic rules of the game, all the card hands ranked in order of strength, and extra tips and tricks.
+	\item 2.)Have a GUI that the user will use to start the game and play which includes:
 	\begin{itemize}
 	\item a start menu with the option to view the help page, start a new game or resume a saved game
 	\item a game view which shows the user their hand with, and the board cards with graphical images of the cards. It will also show the amount of chips the player and computer have, allow the user to save after each round, and have a way to access the help page at any time via button or other means. 
 	\end{itemize}
-	\item 	have a computer program that can play Texas Hold-Em against the user, this computer program shall be able to:
+	\item 3.) have a computer program that can play Texas Hold-Em against the user, this computer program shall be able to:
 	\begin{itemize}
 	\item	bet, raise, call, check and fold
 	\item 	keep a count of the number of chips it has and the player has
@@ -118,13 +118,13 @@
 	\item	calculate the probability of winning a round based on the hand it’s given
 	\item 	make actions based on the probability of winning/losing
 	\end{itemize}
-	\item 	be able to start a game, distribute cards, and monitor chip counts
-	\item	pit the player against a computer opponent in a match of heads up no limit 					Texas Hold-Em
-	\item 	be able to distribute cards to the player, computer and board. The distribution of these cards should appear random and not follow any discernible pattern
-	\item	be able to save the game, and end a game once either the player or the computer 			run out of chips
-	\item 	allow users to set the amount of chips to play with at the start of the game
-	\item 	monitor and adjust chip count after each round
-	\item 	end the game when either player or computer loses all their chips
+	\item 4.) be able to start a game, distribute cards, and monitor chip counts
+	\item 5. pit the player against a computer opponent in a match of heads up no limit 					Texas Hold-Em
+	\item 6.) be able to distribute cards to the player, computer and board. The distribution of these cards should appear random and not follow any discernible pattern
+	\item 7.) be able to save the game, and end a game once either the player or the computer 			run out of chips
+	\item 8.) allow users to set the amount of chips to play with at the start of the game
+	\item 9.) monitor and adjust chip count after each round
+	\item 10.) end the game when either player or computer loses all their chips
 	\end{itemize}
 	
 	\section{Non-Functional Requirements}
