Add revision history table to design document

--- a/Documents/DesignDocument.tex
+++ b/Documents/DesignDocument.tex
@@ -24,6 +24,26 @@
     
     \newpage
     \section{Revision History}
+    \begin{table}[h]
+    \caption{Revision History}
+    \begin{tabular}{p{4cm}p{2cm}p{2cm}p{4cm}}
+    Revision & Date & Team Member & Description of Change\\
+    \hline
+    0 & November 2 & Hui Chen & Started Design Document\\
+    \hline
+    0 & November 4 & Sam Hamel & Design Document Revision 0 Finished \\
+    \hline
+    0 & November 4 & Nareshkumar Maheshkumar & Edit and Proofread Revision 0\\
+    \hline
+    1 & November 6 & Hui Chen & Update MIS Section\\
+    \hline
+    1 & November 6 & Nareshkumar Maheshkumar & Design Document Revision 1 Finished\\
+    \hline
+     1 & November 6 & Sam Hamel & Edit and Proofread Revision 1\\
+    \hline
+    \end{tabular}
+    \end{table}
+    \newpage
     \section{Module Guide For No Limit Texas HoldEm Program(NLTP)}
     \subsection{Introduction}
     No Limit Texas HoldEm program follows model decomposition based on the principle of information hiding laid out by Parnas. The system is designed to be adaptable because possilbe future changes have been accounted for in the form of secrets. This flexibility will allow for easy revision control and will allow developers to quickly modify the program as needed. This design document includes in it a module guide (MG) of the system which gives a brief overview of the modules and allows both designers and maintainers to easily identify the parts of the software. The MG directly relates to the SRS with each requirement being fulfilled by either one module or the conjuction of several modules. For greater detail of the modules and what is needed to implement them there is the Module Interface Specifications (MIS), while the shedule of when these modules will be implemented is included in the Gantt and Pert charts.
