Add Gantt chart and Schedule table (Final Version of Design Document)

--- a/Documents/DesignDocument.tex
+++ b/Documents/DesignDocument.tex
@@ -439,10 +439,11 @@
 		\caption{Use Hierarchy Diagram}
 		\label{fig1: Figure1}
 		\end{figure}
+	\newpage
     \section{Traceability Matrix}
     \begin{table}[h]
     \caption{Traceability Matrix Between the Module And Requirements}
-    \begin{tabular}{p{4cm}p{2cm}p{2cm}p{4cm}}
+    \begin{tabular}{p{4cm}p{2cm}}
     Requirements & Modules\\
     \hline
     R1 & N/A\\
@@ -470,7 +471,7 @@
     
     \begin{table}[h]
     \caption{Traceability Matrix Between Anticipated Changes And Requirements}
-    \begin{tabular}{p{4cm}p{2cm}p{2cm}p{4cm}}
+    \begin{tabular}{p{4cm}p{2cm}}
     Anticipated Changes(AC) & Modules\\
     \hline
     AC1 & N/A\\
@@ -488,6 +489,36 @@
     \end{tabular}
     \end{table}
     \newpage
+    \newpage
     \section{Schedule}
+     \begin{table}[h]
+    \caption{Detailed Timeline}
+    \begin{tabular}{p{5cm}p{7cm}}
+    Task & Finish Date\\
+    \hline
+    Texas Hold 'Em Module & November 10\\
+    \hline
+    Game and Deck Modules & November 11\\
+    \hline
+    All other modules & November 12\\
+    \hline
+    Revision 0 Demonstration & November 19\\
+    \hline
+    Final Demo & December 1\\
+    \hline
+    Peer Evaluation and December 3\\
+    \hline
+    Final Doc & December 8\\
+    \hline
+    \end{tabular}
+    \end{table}
+    
+ 
+    \section{Gantt Chart}
+		\begin{figure}[h]
+		\includegraphics[scale=0.4]{Gantt.png}
+		\caption{Gantt Chart}
+		\label{fig1: Figure1}
+		\end{figure}
         
     \end{document}
